// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test vuex-snapshot-test decrement 1`] = `
"Snapshot Diff:
- Before
+ After

  Object {
    \\"counter\\": Object {
-     \\"value\\": 1,
+     \\"value\\": 0,
    },
  }"
`;

exports[`test vuex-snapshot-test increment 1`] = `
"Snapshot Diff:
- Before
+ After

  Object {
    \\"counter\\": Object {
-     \\"value\\": 3,
+     \\"value\\": 4,
    },
  }"
`;

exports[`test vuex-snapshot-test increment 2`] = `
"Snapshot Diff:
- Before
+ After

  Object {
    \\"counter\\": Object {
-     \\"value\\": 1,
+     \\"value\\": 2,
    },
  }"
`;

exports[`test vuex-snapshot-test increment 3`] = `
"Snapshot Diff:
- Before
+ After

  Object {
    \\"counter\\": Object {
-     \\"value\\": 1,
+     \\"value\\": 2,
    },
  }"
`;

exports[`test vuex-snapshot-test multiple 1`] = `
"Snapshot Diff:
- Before
+ After

  Object {
    \\"counter\\": Object {
-     \\"value\\": 3,
+     \\"value\\": 15,
    },
  }"
`;

exports[`test vuex-snapshot-test multiple 2`] = `
"Snapshot Diff:
- Before
+ After

  Object {
    \\"counter\\": Object {
-     \\"value\\": 1,
+     \\"value\\": 5,
    },
  }"
`;

exports[`test vuex-snapshot-test multiple 3`] = `
"Snapshot Diff:
- Before
+ After

  Object {
    \\"counter\\": Object {
-     \\"value\\": 1,
+     \\"value\\": 5,
    },
  }"
`;
